--- a/libHome/src/main/res/layout/home_activity_room.xml
+++ b/libHome/src/main/res/layout/home_activity_room.xml
@@ -13,7 +13,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="16dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
