--- a/libHome/src/main/res/layout/home_activity_main.xml
+++ b/libHome/src/main/res/layout/home_activity_main.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/home"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ViewStub
-        android:id="@+id/home_stub"
+    <fragment
+        android:id="@+id/home_fragment"
+        android:name="com.example.libHome.HomeFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout="@layout/home_fragment_home" />
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
