--- a/libHome/src/main/res/values/theme.xml
+++ b/libHome/src/main/res/values/theme.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:statusBarColor">#FFF8F9FA</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
 
 </resources>
