--- a/libSquare/src/main/res/layout/square_activity_job_time.xml
+++ b/libSquare/src/main/res/layout/square_activity_job_time.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,32 +8,32 @@
     android:orientation="vertical">
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lo_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
+        app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_fileName="lottie/money4.json"
         app:lottie_loop="true" />
 
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="52dp" />
-
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:strokeColor="#80666666"
-        app:strokeWidth="1dp"
-        android:elevation="2dp"
         android:layout_marginHorizontal="40dp"
-        app:cardCornerRadius="8dp">
+        android:layout_marginTop="52dp"
+        android:elevation="2dp"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/lo_header"
+        app:strokeColor="#80666666"
+        app:strokeWidth="1dp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="32dp"
             android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="32dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -94,9 +94,11 @@
                     android:text=":"
                     android:textSize="34sp"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_hour"
                     app:layout_constraintEnd_toStartOf="@+id/tv_minute"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/tv_hour" />
+                    app:layout_constraintStart_toEndOf="@+id/tv_hour"
+                    app:layout_constraintTop_toTopOf="@+id/tv_hour" />
 
                 <TextView
                     android:id="@+id/tv_minute"
@@ -118,9 +120,11 @@
                     android:text=":"
                     android:textSize="34sp"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_hour"
                     app:layout_constraintEnd_toStartOf="@+id/tv_seconds"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/tv_minute" />
+                    app:layout_constraintStart_toEndOf="@+id/tv_minute"
+                    app:layout_constraintTop_toTopOf="@+id/tv_hour" />
 
                 <TextView
                     android:id="@+id/tv_seconds"
@@ -169,4 +173,12 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </com.google.android.material.card.MaterialCardView>
-</androidx.appcompat.widget.LinearLayoutCompat>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lo_over"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:lottie_fileName="lottie/lottie_celebrate.json" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
