--- a/lib_news/src/main/res/layout/news_test.xml
+++ b/lib_news/src/main/res/layout/news_test.xml
@@ -8,7 +8,8 @@
     <com.example.lib_news.widget.CustomShapeView
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:text="1qweqweqweqweqweqwqqeqweqw231q3"
+        android:layout_marginTop="20dp"
+        android:text=""
         android:paddingStart="74dp"
         android:paddingEnd="12dp"
         android:gravity="center_vertical"
@@ -16,16 +17,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/news_imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:src="@mipmap/bg_ad"
-        android:layout_marginTop="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
 
