--- a/libHome/src/main/res/layout/home_fragment_demo_sliding.xml
+++ b/libHome/src/main/res/layout/home_fragment_demo_sliding.xml
@@ -10,18 +10,10 @@
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:paddingHorizontal="16dp"
         android:paddingTop="16dp"
         android:paddingBottom="8dp"
         app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/btn_back"
-            android:layout_width="48dp"
-            android:layout_height="38dp"
-            android:paddingVertical="7dp"
-            android:src="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:id="@+id/tv_title"
@@ -31,15 +23,7 @@
             android:gravity="center"
             android:text="悬浮窗Fragment"
             android:textSize="18sp"
-            android:textStyle="bold"
-            tools:text="标题" />
-
-        <ImageView
-            android:id="@+id/btn_more"
-            android:layout_width="48dp"
-            android:layout_height="38dp"
-            android:visibility="invisible"
-            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
+            android:textStyle="bold" />
     </LinearLayout>
 
     <TextView
