--- a/libHome/src/main/res/layout/home_sliding_demo_activity.xml
+++ b/libHome/src/main/res/layout/home_sliding_demo_activity.xml
@@ -10,12 +10,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:topBarTitle="悬浮窗" />
 
-
     <Button
         android:id="@+id/home_app"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="62dp"
         android:text="App悬浮窗"
         app:layout_constraintBottom_toTopOf="@+id/home_activity"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +47,7 @@
         android:id="@+id/home_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="62dp"
         android:text="View悬浮窗"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/home_fragment"
@@ -62,5 +61,38 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="40dp"
         android:layout_marginVertical="160dp" />
+
+    <com.example.libHome.sliding.SlidingDemoView
+        android:id="@+id/view_sliding"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="@drawable/bg_view"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:text="移除Fragment"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_remove_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:text="移除View"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_remove"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
