--- a/libHome/src/main/res/layout/home_activity_intent_setting.xml
+++ b/libHome/src/main/res/layout/home_activity_intent_setting.xml
@@ -4,6 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.example.libHome.intentSetting.GnRdHotPanProgress
+        android:id="@+id/progress_circular"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:progress="50"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btn_setting"
         android:layout_width="wrap_content"
