--- a/lib_news/src/main/res/layout/news_activity_wx_manager.xml
+++ b/lib_news/src/main/res/layout/news_activity_wx_manager.xml
@@ -3,25 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
+    android:clipToPadding="false"
+    android:clipChildren="false"
     android:background="@color/white"
     android:orientation="vertical">
 
     <com.example.uilibrary.widget.CommonTopBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="2dp"
         app:topBarTitle="全部歌单" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_my_song"
-        android:layout_width="match_parent"
-        android:paddingHorizontal="12dp"
-        android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_all_song"
         android:layout_width="match_parent"
         android:paddingHorizontal="12dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:layout_height="match_parent" />
 
 </LinearLayout>
