--- a/lib_news/src/main/res/layout/news_rv_item_song.xml
+++ b/lib_news/src/main/res/layout/news_rv_item_song.xml
@@ -1,29 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/parent"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="4dp"
-    android:clipToPadding="false"
-    android:clipChildren="false"
     android:layout_marginVertical="4dp"
-    android:background="@drawable/bg_r99_black_20"
-    android:paddingHorizontal="8dp"
-    android:paddingVertical="4dp">
+    android:clipChildren="false"
+    android:clipToPadding="false">
 
-    <ImageView
-        android:id="@+id/btn"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/news_song_item_btn" />
-
-    <TextView
-        android:id="@+id/tv_song"
+    <LinearLayout
+        android:id="@+id/parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/news_item_song_bg"
         android:paddingHorizontal="8dp"
-        android:paddingVertical="2dp"
-        android:textColor="@color/white"
-        tools:text="歌单" />
-</LinearLayout>
+        android:paddingVertical="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/btn"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/news_song_item_btn" />
+
+        <TextView
+            android:id="@+id/tv_song"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="4dp"
+            android:paddingVertical="2dp"
+            android:textColor="@color/white"
+            tools:text="歌单" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/anim_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/news_item_song_bg"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="4dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/news_song_item_btn" />
+
+        <TextView
+            android:id="@+id/tv_song2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="4dp"
+            android:paddingVertical="2dp"
+            android:textColor="@color/white"
+            tools:text="歌单" />
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
