--- a/lib_news/src/main/res/layout/news_rv_item_song_title.xml
+++ b/lib_news/src/main/res/layout/news_rv_item_song_title.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="4dp"
+    android:animateLayoutChanges="true"
     android:clipChildren="false"
     android:clipToPadding="false"
     android:orientation="vertical">
