--- a/libHome/src/main/res/layout/home_rv_item_banner.xml
+++ b/libHome/src/main/res/layout/home_rv_item_banner.xml
@@ -4,24 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="46dp"
-    android:layout_marginVertical="8dp"
+    android:layout_marginEnd="100dp"
+    android:clipChildren="false"
+    android:layout_marginStart="-40dp"
+    android:layout_height="match_parent"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:background="@color/black"
         android:layout_height="wrap_content">
 
         <com.example.uilibrary.widget.roundViews.RoundImageView
             android:id="@+id/iv_banner"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:src="@mipmap/img1"
+            android:scaleType="fitXY"
             app:layout_constraintDimensionRatio="3:1"
             app:layout_constraintTop_toTopOf="parent"
-            app:riv_radius="8dp"
-            app:srcCompat="@mipmap/img1" />
+            app:riv_radius="8dp" />
 
         <TextView
             android:id="@+id/tv_banner"
